# reconhecimento_facial

./: pyproject.toml
codigo/: face.py  foto_registro.py  m_principal.py  moveSound.py  simple_facerec.py
outros/: acesso.txt
