[tool.poetry]
name = "inteligencia_art"
version = "0.1.0"
description = ""
authors = ["LuizEduardo-service <luizeduardo.service@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.4"
opencv-python = "^4.5.5"
easygui = "^0.98.3"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
blue = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
